fix: GET /rooms/{}/workspace/{}